warn about add-opens jvm-opts for newer jvm