@@ -75,7 +75,6 @@
     (apply run "clojure"
            "-J--add-opens=java.base/java.nio=ALL-UNNAMED"
            "-J--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-           "-J--illegal-access=permit"
            "-Sdeps"
            (cond
              (= "latest" version)
